# liveavatar-channel-python

./: .gitignore  CLAUDE.md  MANIFEST.in  PROTOCOL.md  PROTOCOL.zh.md  README.md  README.zh.md  pyproject.toml
.claude/: settings.local.json
docs/superpowers/specs/: 2026-04-10-python-sdk-design.md
liveavatar_channel_sdk/: __init__.py  _ws_client.py  audio_frame.py  audio_frame_builder.py  avatar_agent.py  avatar_channel_listener.py  avatar_channel_listener_adapter.py  avatar_websocket_client.py  dispatch.py  event_type.py  exponential_backoff_strategy.py  image_frame.py  image_frame_builder.py  message.py  message_builder.py  message_sender.py  session_client.py  session_manager.py  session_models.py  session_state.py  streaming_response_handler.py  websocket_adapter.py
liveavatar_channel_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
liveavatar_channel_sdk/example/: live_avatar_service_simulator.py
liveavatar_channel_server_example/: main.py
tests/: test_audio_frame.py  test_avatar_agent.py  test_dispatch.py  test_image_frame.py  test_message_builder.py  test_message_sender.py  test_session_client.py  test_streaming_response_handler.py  test_websocket_client_dispatch.py
