[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liveavatar-channel-sdk"
version = "0.1.0"
description = "Live Avatar Channel SDK - Python WebSocket protocol for live avatar communication"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Live Avatar Team"}
]

dependencies = [
    "websockets>=12",
    "sortedcontainers",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["liveavatar_channel_sdk*", "liveavatar_channel_server_example*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py39"]
