[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liveavatar-channel-sdk"
version = "0.2.0"
description = "Live Avatar Channel SDK - Python WebSocket protocol for live avatar communication"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Live Avatar Team"}
]

dependencies = [
    "websockets>=12",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["liveavatar_channel_sdk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py39"]
